# iot-system-sim

./: .gitignore  CMakeLists.txt  README  README.md  build.sh
.github/workflows/: cmake-setup.yml
config/: config.json
src/: alerts_watcher.c  alerts_watcher.h  bin_heap.c  bin_heap.h  config.c  config.h  console_reader.c  console_reader.h  home_iot.c  home_iot.h  log.c  log.h  max_heap.c  max_heap.h  queue.c  queue.h  ring_buffer.c  ring_buffer.h  sensor.c  sensor.h  sensor_reader.c  sensor_reader.h  sensors_alerts.h  shared_utils.h  string.c  string.h  system_manager.c  system_manager.h  user_console.c  user_console.h  worker.c  worker.h
